Сделаны генерик коллбэки и параметры убраны в классы.